--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,17 @@
 body
 {
     font-family: Roboto;
-    font-style: normal;
     margin: 0%;
+    height:100vh;
 }
+
+#root{
+    height: 100%;
+}
+
+.app{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
