--- a/src/components/aboutme/Aboutme.css
+++ b/src/components/aboutme/Aboutme.css
@@ -16,6 +16,8 @@
 .profile_desc{
     width: 80%;
     text-align: justify;
-    margin-top: 1em;
+    margin-top: 3em;
     font-weight: 500;
+    line-height: 1.5rem;
+    letter-spacing: 0.02rem;
 }
