--- a/src/components/aboutme/Aboutme.css
+++ b/src/components/aboutme/Aboutme.css
@@ -21,3 +21,9 @@
     line-height: 1.5rem;
     letter-spacing: 0.02rem;
 }
+
+.about_me_title{
+    margin-bottom: 0.5em;
+    font-size: 2.5rem;
+    font-variant-caps: all-petite-caps;
+}
