--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -87,3 +87,54 @@
     color: thistle;
     cursor: pointer;
 }
+
+.modal
+{
+    position: absolute;
+    inset: 20px;
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255) none repeat scroll 0% 0%;
+    overflow: auto;
+    border-radius: 4px;
+    outline: currentcolor none medium;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal_overlay
+{
+    position: fixed;
+    inset: 0px;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal_image
+{
+    width: 100%;
+    height: 40%;
+    object-fit: cover;
+}
+
+.ReactModal__Body--open {
+    overflow: hidden;
+}
+
+.modal_container
+{
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex: 1;
+}
+
+.modal_project_name
+{
+    font-size: 2rem;
+    border-bottom: 1px solid;
+}
+.modal_project_long_desc
+{
+    margin-top: 1em;
+    
+}
