--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -9,6 +9,21 @@
     margin-top: 2em;
 }
 
+.project_cards
+{
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 850px)
+{
+    .project_cards
+    {
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
 
 .project_card
 {
@@ -29,6 +44,15 @@
     box-shadow: 0px 0px 4px black;
     transition: box-shadow 10ms; 
       
+}
+
+@media (min-width: 850px)
+{
+    .project_card
+    {
+        margin: 0;
+        width: 25%;
+    }
 }
 
 .project_card:hover,
