--- a/src/components/aboutme/Aboutme.css
+++ b/src/components/aboutme/Aboutme.css
@@ -21,6 +21,9 @@
     flex-direction: column;
     align-items: center;
     margin-top: 4em;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1400px;
 }
 
 .profile_desc
