--- a/src/components/aboutme/Aboutme.css
+++ b/src/components/aboutme/Aboutme.css
@@ -51,6 +51,7 @@
     margin-bottom: 0.5em;
     font-size: 2.5rem;
     font-variant-caps: all-petite-caps;
+    border-bottom: 2px solid rgb(0, 221, 136);
 }
 
 .about_me_content
