--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -80,6 +80,9 @@
     font-size: 2.5rem;
     text-transform: uppercase;
     text-align: center;
+    border-bottom: 2px solid rgb(0, 221, 136);
+    width: max-content;
+    align-self: center;
 }
 
 .project_short_description{
